fix phone wrap issue

--- a/src/pages/PcPreview/Home.less
+++ b/src/pages/PcPreview/Home.less
@@ -214,10 +214,4 @@ body {
   .phoneIcon {
     width: 14px;
   }
-  .phoneIcon {
-    width: 14px;
-  }
-  .phoneIcon {
-    width: 14px;
-  }
 }
